test/e2e/chainsaw/httproute-multiple-extra-backends/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-multiple-extra-backends
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  rules:
    - backendRefs:
        - name: httproute-multiple-extra-backends-stable-service
          port: 80
          weight: 100
        - name: httproute-multiple-extra-backends-canary-service
          port: 80
          weight: 0
        - name: httproute-multiple-extra-backends-extra-service-1
          port: 80
          weight: 1
        - name: httproute-multiple-extra-backends-extra-service-2
          port: 80
          weight: 0
